@@ -9,8 +9,10 @@
 
 (use gauche.test)
 (use gauche.collection)
+(use gauche.sequence)
 (use srfi-1)
 (use srfi-13)
+(use util.list)
 
 (test-start "dbd.mysql(low level)")
 (use dbd.mysql)
@@ -54,7 +56,66 @@
 (test* "mysql-real-escape-string" "\\0a\\rb\\nc\\\\d\\'e\\\"f\\Z"
        (mysql-real-escape-string *mysql* "\0a\rb\nc\\d'e\"f\x1a"))
 
+(define-constant *mysql-field-slots*
+  `((name            ,string-ci=?)
+    (original-name   ,string-ci=?)
+    (table           ,string-ci=?)
+    (original-table  ,string-ci=?)
+    (db              ,string-ci=?)
+    (catalog         ,string=?)
+    (default-value   ,equal?)
+    (length          ,=)
+    (max-length      ,=)
+    (not-null?       ,eqv?)
+    (primary-key?    ,eqv?)
+    (unique-key?     ,eqv?)
+    (multiple-key?   ,eqv?)
+    (unsigned?       ,eqv?)
+    (zerofill?       ,eqv?)
+    (auto-increment? ,eqv?)
+    (decimals        ,=)
+    (charset-number  ,=)
+    (type            ,=)))
+
 (test-section "Issue MySQL statement(not prepared)")
+
+(define-constant *field-definition*
+  `#(((name . "ID") (original-name . "ID")
+      (table . "DBD_TEST") (original-table . "DBD_TEST")
+      (db . "test") (catalog . "def")
+      (default-value . #f)
+      (length . 11) (max-length . 1)
+      (not-null? . #t) (primary-key? . #t) (unique-key? . #f)
+      (multiple-key? . #f) (unsigned? . #f) (zerofill? . #f)
+      (binary? . #f) (auto-increment? . #f) (decimals . 0)
+      (charset-number . 63) (type . ,MYSQL_TYPE_LONG))
+     ((name . "DATA") (original-name . "DATA")
+      (table . "DBD_TEST") (original-table . "DBD_TEST")
+      (db . "test") (catalog . "def")
+      (default-value . #f)
+      (length . 765) (max-length . 5)
+      (not-null? . #f) (primary-key? . #f) (unique-key? . #f)
+      (multiple-key? . #f) (unsigned? . #f) (zerofill? . #f)
+      (binary? . #f) (auto-increment? . #f) (decimals . 0)
+      (charset-number . 33) (type . ,MYSQL_TYPE_VAR_STRING)
+      )))
+
+(define (is-class? class obj)
+  (eq? class (class-of obj)))
+
+(define (check-field info field)
+  (define (cmp-slot-value slot-name cmp-func?)
+    (cmp-func? (slot-ref field slot-name)
+	       (assq-ref info slot-name #f)))
+  (and (is-class? <mysql-field> field)
+       (call/cc
+	(lambda (ret)
+	  (for-each (lambda (args)
+		      (or (apply cmp-slot-value args)
+			  (ret #f)))
+		    *mysql-field-slots*)
+	  #t))))
+
 (test* "mysql-real-query/create table" (undefined)
        (mysql-real-query *mysql* "CREATE TABLE DBD_TEST (id integer, data varchar(255), constraint primary key(id))"))
 (dotimes (i 10)
@@ -73,45 +134,21 @@
   (test* #`"mysql-fetch-row record #,|i|" `#(,#`",|i|" ,#`"DATA,|i|") (mysql-fetch-row *result*) equal?))
 (test* "mysql-res-closed?/before close" #f (mysql-res-closed? *result*))
 
-(test* "mysql-fetch-field" <mysql-field> (mysql-fetch-field *result*) (lambda (class obj)
-									(eq? class (class-of obj))))
-(test* "mysql-fetch-field" <mysql-field> (mysql-fetch-field *result*) (lambda (class obj)
-									(eq? class (class-of obj))))
-(test* "mysql-fetch-field" #f (mysql-fetch-field *result*))
+(for-each-with-index (lambda (i info)
+		       (test* "mysql-fetch-field" (vector-ref *field-definition* i)
+			      (mysql-fetch-field *result*) check-field))
+		     *field-definition*)
 
-(test* "mysql-fetch-field-direct" <mysql-field> (let1 field (mysql-fetch-field-direct *result* 0)
-						  (class-of field)))
-(let ((field0 (mysql-fetch-field-direct *result* 0))
-      (field1 (mysql-fetch-field-direct *result* 1)))
-  (for-each (lambda (args)
-	      (apply (lambda (sname comp value0 value1)
-		       (test* (format "Field #0 Information: ~a" sname) value0 (slot-ref field0 sname) comp)
-		       (test* (format "Field #1 Information: ~a" sname) value1 (slot-ref field1 sname) comp))
-		     args))
-	    `((name ,string-ci=? "ID" "DATA")
-	      (original-name ,string-ci=? "ID" "DATA")
-	      (table ,string-ci=? "DBD_TEST" "DBD_TEST")
-	      (original-table ,string-ci=? "DBD_TEST" "DBD_TEST")
-	      (db ,(lambda (expected value) (if value
-						(string-ci=? expected value)
-						#t))
-		  "test" "test")
-	      (catalog ,string=? "def" "def")
-	      (default-value ,eqv? #f #f)
-	      (length ,= 11 765)
-	      (max-length ,= 1 5)
-	      (not-null? ,eqv? #t #f)
-	      (primary-key? ,eqv? #t #f)
-	      (unique-key? ,eqv? #f #f)
-	      (multiple-key? ,eqv? #f #f)
-	      (unsigned? ,eqv? #f #f)
-	      (zerofill? ,eqv? #f #f)
-	      (binary? ,eqv? #f #f)
-	      (auto-increment? ,eqv? #f #f)
-	      (decimals ,= 0 0)
-	      (charset-number ,= 63 33)
-	      (type ,= ,MYSQL_TYPE_LONG ,MYSQL_TYPE_VAR_STRING)
-	      )))
+(for-each (lambda (info field)
+	    (test* "mysql-fetch-fields" info field check-field))
+	  *field-definition*
+	  (mysql-fetch-fields *result*))
+
+(for-each-with-index (lambda (i info)
+		       (test* "mysql-fetch-field-direct"
+			      info (mysql-fetch-field-direct *result* i) check-field))
+		     *field-definition*)
+
 (test* "mysql-free-result" (undefined) (mysql-free-result *result*))
 (test* "mysql-res-closed?/after close" #t (mysql-res-closed? *result*))
 (test* "mysql-real-query/drop table" (undefined) (mysql-real-query *mysql* "DROP TABLE DBD_TEST"))
